--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -549,7 +549,7 @@
                 .then(json => {
                     const gameInfo = json.game_info;
                     data = json.moves.filter(item => item.turn !== undefined);
-                    data = data.filter(it => ((Array.isArray(it.moves)) || it.action === 'win' || it.action === 'double' || it.action === 'take') && it.action !== 'pass');
+                    data = data.filter(it => ((Array.isArray(it.moves)) || it.action === 'double' || it.action === 'take') && it.action !== 'pass' || it.action === 'win');
 
                     // Обновить счет для текущей игры
                     const gameScores = gameInfo.scores || {};
