--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -1102,7 +1102,7 @@
             // Generate move hints table
             let moveTableHtml = '<table><tr><th>Ход</th><th>Вероятности, %</th><th>Эквити</th></tr>';
             if (item.action === 'win') {
-                moveTableHtml += `<tr class="hint-best"><td>Победа (${item.points} очков)</td><td>-</td><td>-</td></tr>`;
+                moveTableHtml += `<tr class="hint-best"><td>Победа ${item.player_name} (${item.points} очков)</td><td>-</td><td>-</td></tr>`;
             } else {
                 (item.hints || []).forEach((hint, index) => {
                     if (hint.probs && hint.probs.length >= 2) {
