--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -371,11 +371,13 @@
             border-radius: 4px;
             font-size: 18px;
             font-weight: bold;
-            margin-bottom: 1px;
             text-align: right;
             display: block;
             width: fit-content;
-            margin-left: auto;
+            position: absolute;
+            top: 120px;
+            right: 20px;
+            z-index: 10;
         }
 
         .pips-below-board {
