--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -364,6 +364,13 @@
             margin: 10px 0;
         }
 
+        #top-bar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 10px;
+        }
+
         .pips-above-board {
             background-color: #000000;
             color: #ffffff;
@@ -371,16 +378,11 @@
             border-radius: 4px;
             font-size: 18px;
             font-weight: bold;
+            margin-bottom: 1px;
             text-align: right;
             display: block;
             width: fit-content;
-        }
-
-        .game-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 10px;
+            margin-left: auto;
         }
 
         .pips-below-board {
@@ -426,10 +428,8 @@
 <body>
     <div class="container">
         <h1>Backgammon Game Analysis</h1>
-        <div class="game-header">
-            <div id="players-info"></div>
-            <div id="black-pips" class="pips-above-board">0</div>
-        </div>
+        <div id="players-info"></div>
+        <div id="top-bar"></div>
         <canvas id="boardCanvas" width="800" height="800"></canvas>
         <div class="board-footer">
             <div id="move-info" class="move-info"></div>
@@ -472,6 +472,7 @@
         let matchLength = 0;
         const infoDiv = document.getElementById('move-info');
         const playersInfoDiv = document.getElementById('players-info');
+        const topBar = document.getElementById('top-bar');
         infoDiv.innerHTML = '<div class="loading">Loading game data...</div>';
 
         // Загружаем список доступных игр
@@ -503,7 +504,8 @@
                     });
                     selectHtml += '</select>';
                     currentGameNum = availableGames[0].game_number;
-                    playersInfoDiv.innerHTML = `<div style="display: flex; justify-content: space-between; align-items: center;"><span>Матч до ${matchLength}</span><span>Игра ${currentGameNum}</span><span>Счет: ${redScore} - ${blackScore}</span></div>Белые: ${redPlayer} – Черные: ${blackPlayer}<br>${selectHtml}`;
+                    playersInfoDiv.innerHTML = `<div style="display: flex; justify-content: space-between; align-items: center;"><span>Матч до ${matchLength}</span><span>Игра ${currentGameNum}</span><span>Счет: ${redScore} - ${blackScore}</span></div>Белые: ${redPlayer} – Черные: ${blackPlayer}<br>`;
+                    topBar.innerHTML = selectHtml + '<div id="black-pips" class="pips-above-board">0</div>';
 
                     // Автоматически загружаем первую игру
                     if (availableGames.length > 0) {
@@ -513,6 +515,7 @@
                     const matchText = matchLength > 0 ? `Матч до ${matchLength}<br>` : '';
                     const scoreText = `Счет: ${redScore} - ${blackScore}<br>`;
                     playersInfoDiv.innerHTML = `${matchText}Белые: ${redPlayer} – Черные: ${blackPlayer}<br>${scoreText}`;
+                    topBar.innerHTML = '<div id="black-pips" class="pips-above-board">0</div>';
 
                     // Автоматически загружаем единственную игру
                     loadGame(availableGames[0].game_number);
@@ -520,6 +523,7 @@
                     const matchText = matchLength > 0 ? `Матч до ${matchLength}<br>` : '';
                     const scoreText = `Счет: ${redScore} - ${blackScore}<br>`;
                     playersInfoDiv.innerHTML = `${matchText}Белые: ${redPlayer} – Черные: ${blackPlayer}<br>${scoreText}`;
+                    topBar.innerHTML = '<div id="black-pips" class="pips-above-board">0</div>';
                     infoDiv.innerHTML = '<div class="error">No games found in this analysis.</div>';
                 }
             })
@@ -564,7 +568,8 @@
                         const gameScores = gameInfo.scores || {};
                         const gameRedScore = gameScores.Red || 0;
                         const gameBlackScore = gameScores.Black || 0;
-                        playersInfoDiv.innerHTML = `<div style="display: flex; justify-content: space-between; align-items: center;"><span>Матч до ${matchLength}</span><span>Игра ${currentGameNum}</span><span>Счет: ${gameRedScore} - ${gameBlackScore}</span></div>Белые: ${redPlayer} – Черные: ${blackPlayer}<br>${document.getElementById('gameSelect') ? document.getElementById('gameSelect').outerHTML : ''}`;
+                        playersInfoDiv.innerHTML = `<div style="display: flex; justify-content: space-between; align-items: center;"><span>Матч до ${matchLength}</span><span>Игра ${currentGameNum}</span><span>Счет: ${gameRedScore} - ${gameBlackScore}</span></div>Белые: ${redPlayer} – Черные: ${blackPlayer}<br>`;
+                        topBar.innerHTML = (document.getElementById('gameSelect') ? document.getElementById('gameSelect').outerHTML : '') + '<div id="black-pips" class="pips-above-board">0</div>';
 
                         // Найти все индексы ходов с удвоением
                         doubleTurns = data.map((item, index) => item.action === 'double' ? index : -1).filter(idx => idx !== -1);
