--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -1091,7 +1091,7 @@
                         displayAction += `, ${hint.action_2}`;
                     }
                     let rowClass = '';
-                    if (item.gnu_move === 'Double' && item.gnu_move === hint.action_1) {
+                    if (item.gnu_move === 'Double' ) {
                         if (index === 0) {
                             rowClass = 'hint-best';
                         } else {
