--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -1097,7 +1097,7 @@
                         } else {
                             rowClass = 'hint-good';
                         }
-                    } else if (item.gnu_move.trim() === 'pass' && item.gnu_move.trim() === hint.action_2) {
+                    } else if (item.gnu_move.trim() === 'take' && item.gnu_move.trim() === hint.action_2) {
                         if (index === 0) {
                             rowClass = 'hint-best';
                         } else if (index === 1) {
@@ -1105,7 +1105,7 @@
                         } else {
                             rowClass = 'hint-poor';
                         }    
-                    }else if (item.gnu_move.trim() === 'pass' || item.gnu_move.trim() === 'Double'){
+                    }else if (item.gnu_move.trim() !== 'pass' || item.gnu_move.trim() !== 'Double'){
                         if (index === 0 && hint.action_1 === "No double"){
                             rowClass = 'hint-best';
                         } else {
