--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -1106,7 +1106,7 @@
                             rowClass = 'hint-poor';
                         }    
                     }else if (item.gnu_move.trim() !== 'pass' || item.gnu_move.trim() !== 'Double'){
-                        if (index === 0 && bestAction === "No double"){
+                        if (index === 0 && bestAction1 === "No double"){
                             rowClass = 'hint-best';
                         } else {
                             rowClass = 'hint-poor';
