--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -1105,7 +1105,7 @@
                         } else {
                             rowClass = 'hint-poor';
                         }    
-                    }else if (item.gnu_move.trim() !== 'pass' || item.gnu_move.trim() !== 'Double'){
+                    }else if (item.gnu_move.trim() !== 'take' || item.gnu_move.trim() !== 'Double'){
                         if (index === 0 && bestAction1 === "No double"){
                             rowClass = 'hint-best';
                         } else {
