--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -1084,6 +1084,7 @@
                 const bestAction = item.cube_hints[0].cubeful_equities.find(eq => eq.idx === 1);
                 const bestAction1 = bestAction ? bestAction.action_1 : '';
                 const bestAction2 = bestAction ? bestAction.action_2 : '';
+                const next_item = data[turn + 1];
                 (item.cube_hints[0].cubeful_equities || []).forEach((hint, index) => {
                     const eq = hint.eq ? hint.eq.toFixed(3) : '-';
                     let displayAction = hint.action_1;
@@ -1091,7 +1092,7 @@
                         displayAction += `, ${hint.action_2}`;
                     }
                     let rowClass = '';
-                    if (item.gnu_move.trim() === 'Double' && hint.action_1 === 'Double') {
+                    if (item.gnu_move.trim() === 'Double' && hint.action_1 === 'Double' && hint.action_2 === next_item.gnu_move.trim()) {
                         if (index === 0) {
                             rowClass = 'hint-best';
                         } else {
