--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -1085,6 +1085,7 @@
                 const bestAction1 = bestAction ? bestAction.action_1 : '';
                 const bestAction2 = bestAction ? bestAction.action_2 : '';
                 const next_item = data[turn + 1];
+                const prev_item = data[turn - 1];
                 (item.cube_hints[0].cubeful_equities || []).forEach((hint, index) => {
                     const eq = hint.eq ? hint.eq.toFixed(3) : '-';
                     let displayAction = hint.action_1;
@@ -1095,8 +1096,28 @@
                     if (item.gnu_move.trim() === 'Double' && hint.action_1 === 'Double' && hint.action_2 === next_item.gnu_move.trim()) {
                         if (index === 0) {
                             rowClass = 'hint-best';
-                        } else {
+                        } else if (index === 1) {
                             rowClass = 'hint-good';
+                        } else if (index === 2){
+                            rowClass = 'hint-poor';
+                        }
+                    }
+                    if (item.gnu_move.trim() === 'take' && hint.action_2 === 'take' && hint.action_1 === prev.gnu_move.trim()) {
+                        if (index === 2) {
+                            rowClass = 'hint-best';
+                        } else if (index === 1) {
+                            rowClass = 'hint-good';
+                        } else if (index === 0){
+                            rowClass = 'hint-poor';
+                        }
+                    }
+                    if (item.gnu_move.trim() !== 'take' && item.gnu_move.trim() !== 'Double' && hint.action_1 === 'No Double') {
+                        if (index === 0) {
+                            rowClass = 'hint-best';
+                        } else if (index === 1) {
+                            rowClass = 'hint-good';
+                        } else if (index === 2){
+                            rowClass = 'hint-poor';
                         }
                     }
                     cubeTableHtml += `<tr class="${rowClass}"><td>${displayAction}</td><td>${eq}</td></tr>`;
