--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -1102,7 +1102,7 @@
                             rowClass = 'hint-poor';
                         }
                     }
-                    if (item.gnu_move.trim() === 'take' && hint.action_2 === 'take' && hint.action_1 === prev.gnu_move.trim()) {
+                    if (item.gnu_move.trim() === 'take' && hint.action_2 === 'take') {
                         if (index === 2) {
                             rowClass = 'hint-best';
                         } else if (index === 1) {
@@ -1111,7 +1111,7 @@
                             rowClass = 'hint-poor';
                         }
                     }
-                    if (item.gnu_move.trim() !== 'take' && item.gnu_move.trim() !== 'Double' && hint.action_1 === 'No Double') {
+                    if (item.gnu_move.trim() !== 'take' && item.gnu_move.trim() !== 'Double' && hint.action_1 === 'No double') {
                         if (index === 0) {
                             rowClass = 'hint-best';
                         } else if (index === 1) {
