--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -366,9 +366,10 @@
 
         #top-bar {
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
             align-items: center;
             margin-bottom: 10px;
+            position: relative;
         }
 
         .pips-above-board {
@@ -382,7 +383,9 @@
             text-align: right;
             display: block;
             width: fit-content;
-            margin-left: auto;
+            position: absolute;
+            right: 0;
+            top: 0;
         }
 
         .pips-below-board {
