--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -378,6 +378,7 @@
             border-radius: 4px;
             font-size: 18px;
             font-weight: bold;
+            margin-bottom: -5px;
             text-align: right;
             display: block;
             width: fit-content;
