--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -384,7 +384,7 @@
             width: fit-content;
             position: absolute;
             right: 0;
-            top: 0;
+            bottom: 0;
         }
 
         .pips-below-board {
